Fixed Contact section alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -662,11 +662,13 @@ body.mobile-nav-active {
 --------------------------------*/
 #contact {
   background: #f7f7f7;
-  padding: 80px 0 40px 0; }
+  padding: 80px 0 40px 0;
+  text-align: center; }
   #contact #google-map {
     height: 300px;
     margin-bottom: 20px; }
   #contact .info {
+    text-align: left;
     color: #333333;
     margin-bottom: 30px; }
     #contact .info .info-item {
