--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -829,11 +829,13 @@ body.mobile-nav-active {
 #contact {
   background: #f7f7f7;
   padding: 80px 0 40px 0;
+  text-align: center;
   #google-map {
     height: 300px;
     margin-bottom: 20px;
   }
   .info {
+    text-align: left;
     color: #333333;
     margin-bottom: 30px;
     .info-item {
